--- a/src/app/app.html
+++ b/src/app/app.html
@@ -231,7 +231,8 @@
         </defs>
       </svg>
       <h1>Hello, {{ title() }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
+      <p>Congratulations! Your app is running. 🎉.</p>
+      <p>Se actualizo con S3.</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
@@ -340,3 +341,4 @@
 
 
 <router-outlet />
+
